src/test/ui/parser/trait-bounds-not-on-impl.stderr
error: expected a trait, found type
  --> $DIR/trait-bounds-not-on-impl.rs:8:6
   |
LL | impl Foo + Owned for Bar { //~ ERROR expected a trait, found type
   |      ^^^^^^^^^^^

error: aborting due to previous error

